Fix long button names on mobile

--- a/public/app/styles/forms.less
+++ b/public/app/styles/forms.less
@@ -169,6 +169,10 @@ a.btn-lg {
   border-radius: 0;
   color: #0066ca;
   
+  .media-mobile({
+    font-size: 17px;
+  });
+  
   &[disabled], &[disabled]:active {
     cursor: inherit;
     color: #0066ca;
